Fixed alignment of nav

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -32,7 +32,7 @@ nav ol {
   flex-direction: column;
   right: 0;
   align-content: flex-end;
-  align-items: center;
+  align-items: flex-end;
 }
 
 nav ol li {
@@ -231,6 +231,7 @@ footer a {
   nav ol {
     display: flex;
     flex-direction: row;
+    align-items: center;
   }
 
   nav img {
